Upload de imagens

--- a/aulas/modulo2/src/app/views/auth/signup.njk
+++ b/aulas/modulo2/src/app/views/auth/signup.njk
@@ -1,7 +1,7 @@
 {% extends "_layouts/auth.njk" %}
 
 {% block body %}
-  <form action="/signup" method="POST">
+  <form action="/signup" method="POST" enctype="multipart/form-data">
     <label for="avatar">
       <img src="/images/avatar.svg" alt="Clique para adicionar uma imagem ao seu perfil!" height="24">
     </label>
