--- a/aulas/modulo2/src/app/views/auth/signin.njk
+++ b/aulas/modulo2/src/app/views/auth/signin.njk
@@ -4,6 +4,8 @@
   <form action="/signin" method="POST">
     <img src="/images/logo.svg" alt="GoBarber" height="42">
 
+    {% include "_partials/flash.njk" %}
+
     <input type="email" name="email" id="email" placeholder="Seu e-mail">
     <input type="password" name="password" id="password" placeholder="Senha Secreta">
 
