Validacao de Cadastro

--- a/aulas/modulo2/src/app/views/auth/signin.njk
+++ b/aulas/modulo2/src/app/views/auth/signin.njk
@@ -6,8 +6,8 @@
 
     {% include "_partials/flash.njk" %}
 
-    <input type="email" name="email" id="email" placeholder="Seu e-mail">
-    <input type="password" name="password" id="password" placeholder="Senha Secreta">
+    <input type="email" name="email" id="email" placeholder="barber@gobarber.com.br">
+    <input type="password" name="password" id="password" placeholder="password">
 
     <button type="submit">Sign In</button>
 
