--- a/aulas/modulo2/src/app/views/dashboard.njk
+++ b/aulas/modulo2/src/app/views/dashboard.njk
@@ -1,6 +1,23 @@
 {% extends "_layouts/default.njk" %}
 
 {% block body %}
-  <h1>Olá {{ user.name }}!</h1>
-  <a href="/app/logout">Sign Out</a>
+
+  <div class="content">
+    <strong>Hi {{ user.name }}!</strong>
+    <p>Queue your next cut!</p>
+
+    <ul class="providers">
+      {% for provider in providers %}
+        <li class="provider">
+          <div>
+            <img src="/files/{{ provider.avatar }}" alt="">
+            <strong>{{ provider.name }}</strong>
+          </div>
+          <a href="">+</a>
+        </li>
+      {% endfor %}
+    </ul>
+    <a class="logout" href="/app/logout">Sign Out</a>
+  </div>
+
 {% endblock %}
