Model & Migration Agendamento

--- a/aulas/modulo2/src/app/views/dashboard.njk
+++ b/aulas/modulo2/src/app/views/dashboard.njk
@@ -4,7 +4,7 @@
 
   <div class="content">
     <strong>Hi {{ user.name }}!</strong>
-    <p>Queue your next cut!</p>
+    <p>Request a new appointment</p>
 
     <ul class="providers">
       {% for provider in providers %}
