--- a/aulas/modulo2/src/app/views/appointments/create.njk
+++ b/aulas/modulo2/src/app/views/appointments/create.njk
@@ -17,28 +17,24 @@
       <input type="text" class="flatpickr" placeholder="Pick a date">
 
       <div id="hours">
-        <label>
-          <input type="radio" name="" id="">
-          12:00
-        </label>
-        <label>
-          <input type="radio" name="" id="">
-          12:00
-        </label>
-        <label>
-          <input type="radio" name="" id="">
-          12:00
-        </label>
       </div>
 
       <button type="submit">Appoint</button>
     </form>
   </div>
 
-  <script>
+  <script type="text/javascript">
     flatpickr('.flatpickr', {
       minDate: new Date(),
-      dateFormat: 'd/m/Y'
+      dateFormat: 'd/m/Y',
+      onChange: function (date) {
+        fetch(`/app/available/{{ provider.id }}?date=${date[0].getTime()}`).then(function (response) {
+          response.text().then(function (html) {
+            console.log(html);
+            document.getElementById('hours').innerHTML = html
+          })
+        })
+      }
     })
   </script>
 
