--- a/aulas/modulo2/src/public/css/styles.css
+++ b/aulas/modulo2/src/public/css/styles.css
@@ -256,6 +256,8 @@ ul.providers {
   margin-top: 10px;
   padding-top: 10px;
   border-top: 1px solid #eee;
+  max-height: 40vh;
+  overflow-y: scroll;
 }
 
 #hours label {
